 /* $Id: ChangeLog,v 1.1145 2000-09-25 18:53:42 mike Exp $ */

 2000-09-25: Michal Necasek <michalnec@volny.cz>
    - DDRAW, DDRAW\new: Fixed way too many bugs in asmutil.cpp. Both
             the MMX and non-MMX transparent blitting functions were
             incredibly buggy. They probably still are, but _much_ less
             so. This fixed mouse pointer in Master of Orion II among other
             things (but the Win95 version of MOO2 is simply buggy anyway).

 2000-09-25: Patrick Haller <phaller@gmx.net>
    - KERNEL32: GlobalMemoryStatus does no more rely on Open32 (experiment for AOE)
                This version should "provide" more memory.

 2000-09-24: Markus Montkowski <mmontkowski@gmx.de>
    - DPLAYX
      INCLUDE\win\dplay.h
      INCLUDE\winpdlobby.h : Synced with latest WINE source,
                             should fix some DX version checking via COM interfaces (like in AOE)

 2000-09-22: Jeroen van den Horn <J.vandenHorn@fibre.a2000.nl>
    - GLU32:    - Changed sorter.cpp to eliminate compiler error
    - OPENGL32: - Minor change to glthread.c

 2000-09-22: knut st. osmundsen <knut.stange.osmundsen@mynd.no>
    - Win32k/Pe2Lx:
               -Always apply all-in-one-object aligment fix. This will
                solve lots of problems. (Hopefully temporary; I will explore
                a VMAllocMem flag for VDMs which allows allocation of
                pagealigned objects in the tiled arenas. The flag works
                as expected but I get IPEs during process cleanup...)
               -Corrected bug in applyFixups. Fixups was not applied when
                the all-in-one-object aligment fix was applied.
               -The problem with the build 14053 (testcase) kernels is solved.
                ldrOpenPath have got an addition parameter. Symbols added
                to the SymDB.
               -Win32k.sys build now requires h2inc.exe is present in
                the tools directory of the base DDK.